--- a/src/stylesheets/GoalForm.css
+++ b/src/stylesheets/GoalForm.css
@@ -211,7 +211,6 @@ body {
 
 .goals-form-dialog-box .goals-form .goals-form-grid-wrap .goals-form-submit button {
   font-size: 15px;
-  font-family: 'Pretendard';
   font-weight: 900;
   color: #000;
 }
@@ -220,6 +219,8 @@ body {
   width: 100%;
   margin: 10px auto 0;
   background-color: #eee;
+  font-family: 'Pretendard';
+  font-weight: 800;
   color: #ff0000;
 }
 
