--- a/src/stylesheets/abstracts/_mixin.scss
+++ b/src/stylesheets/abstracts/_mixin.scss
@@ -254,7 +254,7 @@
       
       .goals-todo-list-input-check-icon{
           margin-right: 0.5em;
-          color: $text-gray;
+          // color: $text-gray;
       }
       .goals-todo-list{
           width: 100%;
