--- a/src/stylesheets/Goal.css
+++ b/src/stylesheets/Goal.css
@@ -100,14 +100,19 @@ body {
 }
 
 .goals-list-box .goals-list-wrap .goals-list .goals-listItem-btn {
-  width: 80%;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
   -webkit-box-pack: start;
       -ms-flex-pack: start;
           justify-content: start;
-  padding-left: 2em;
+  padding: 0.4em 1em;
+  border: 1px solid #f3f3f3;
+  border-radius: 8px;
   font-family: inherit;
   font-weight: 900;
   font-size: 14px;
+  background-color: #f5f5f5;
 }
 
 .goals-list-box .goals-list-wrap .goals-list .goals-clickToEdit-btn {
