--- a/src/stylesheets/Goal.scss
+++ b/src/stylesheets/Goal.scss
@@ -1,3 +1,4 @@
+@import './abstracts/variables';
 @import './abstracts/font';
 
 body{
@@ -29,13 +30,16 @@ body{
             justify-content: space-between;
 
             .goals-listItem-btn{ //title 개별
-                width: 80%;
+                width: fit-content;
                 justify-content:start;
-                padding-left: 2em;
+                padding: 0.4em 1em;
+                border: 1px solid $goal-btn-border-gray;
+                border-radius: 8px;
                 font-family: inherit;
                 font-weight: 900;
                 font-size: 14px;
-            }
+            background-color: $goal-btn-gray;
+        }
             .goals-clickToEdit-btn{ //title 삭제
                     font-size: 10px;
                     color: #aaa;
