--- a/src/stylesheets/GoalForm.scss
+++ b/src/stylesheets/GoalForm.scss
@@ -118,7 +118,6 @@ body{
                     right: 0;
                     button{
                         font-size: 15px;
-                        font-family: 'Pretendard';
                         font-weight: 900;
                         color: #000;
                     }
@@ -128,6 +127,8 @@ body{
                     width: 100%;
                     margin: 10px auto 0;
                     background-color: #eee;
+                    font-family: 'Pretendard';
+                    font-weight: 800;
                     color: #ff0000;
                 }
             }
