--- a/src/stylesheets/abstracts/_variables.scss
+++ b/src/stylesheets/abstracts/_variables.scss
@@ -9,4 +9,5 @@ $goal-btn-border-gray: #f3f3f3; // main-feed 목표 버튼 테두리
 $text-black: #1c1c1c; // 텍스트
 $text-gray: #afafaf; // 텍스트
 $icon-black: #000000; // 아이콘
+$text-point: #21bdbd;
 
